--- a/.github/workflows/sync-notes.yaml
+++ b/.github/workflows/sync-notes.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Pull latest notes
         run: |
           git clone https://github.com/aslamcodes/brain-cache notes
-          cp -r notes/path-to-md ./content
+          rsync -av --exclude='.git' --exclude='.obsidian' notes/ ./content
 
       - name: Commit & Push if changed
         run: |
