--- a/.github/workflows/sync-notes.yaml
+++ b/.github/workflows/sync-notes.yaml
@@ -22,4 +22,4 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git diff --cached --quiet || git commit -m "Update notes"
-          git push
+          git push https://x-access-token:${{ secrets.PAT }}@github.com/aslamcodes/quartz-garden.git HEAD:main
