--- a/.github/workflows/sync-notes.yaml
+++ b/.github/workflows/sync-notes.yaml
@@ -5,11 +5,14 @@ on:
   repository_dispatch:
     types: [sync-notes]
 
+
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }}
 
       - name: Pull latest notes
         run: |
@@ -22,4 +25,5 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git diff --cached --quiet || git commit -m "Update notes"
-          git push https://x-access-token:${{ secrets.PAT }}@github.com/aslamcodes/quartz-garden.git HEAD:main
+          git push
+
