--- a/.github/workflows/sync-notes.yaml
+++ b/.github/workflows/sync-notes.yaml
@@ -25,5 +25,6 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git diff --cached --quiet || git commit -m "Update notes"
-          git push
+          git pull --rebase origin main
+          git push origin main
 
