--- a/.github/workflows/sync-notes.yaml
+++ b/.github/workflows/sync-notes.yaml
@@ -27,5 +27,5 @@ jobs:
           git add .
           git diff --cached --quiet || git commit -m "Update notes"
           git pull --rebase origin main
-          git push origin main
+          git push --force origin main
 
