--- a/.github/workflows/sync-notes.yaml
+++ b/.github/workflows/sync-notes.yaml
@@ -24,8 +24,8 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
+          git checkout main
           git add .
           git diff --cached --quiet || git commit -m "Update notes"
-          git pull --rebase origin main
-          git push --force origin main
-
+          git pull origin main --rebase
+          git push origin main
