--- a/.github/workflows/sync-notes.yaml
+++ b/.github/workflows/sync-notes.yaml
@@ -17,8 +17,9 @@ jobs:
 
       - name: Pull latest notes
         run: |
-          git clone https://github.com/aslamcodes/brain-cache notes
-          rsync -av --exclude='.git' --exclude='.obsidian' notes/ ./content
+          git clone https://github.com/aslamcodes/brain-cache
+          rsync -av --exclude='.git' --exclude='.obsidian' brain-cache/ ./content
+          rm -rf notes
 
       - name: Commit & Push if changed
         run: |
